--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="/storage/emulated/0/Pictures/ImgCompressor/IMG-20250125-WA0018.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="/IMG_20250320_211952.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Yuhabarathi S</h1>
             <p>B.sc computer science</p>
         </div>
@@ -166,7 +166,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="/storage/emulated/0/Download/IMG-20250321-WA0005.jpg" target="_blank" class="download-button">Download CV</a>
+            <a href"IMG-20250321-WA0005.jpg" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
